[EDP-DDM-10847] - Added external s3 configuration